some html-css cases added

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <div class="content">
     <div class="container">
       <h1 class="title">
-        Списки
+        Что нужно знать, чтобы делать сайты
       </h1>
-      <div class="unordered-list">
+      <!-- <div class="unordered-list">
         <h2 class="unordered-list__title">Список цветов</h2>
         <ul class="unordered-list__content">
           <li>Красный</li>
@@ -27,37 +27,41 @@
           <li>Зеленый</li>
           <li>Синий</li>
         </ul>
-      </div>
+      </div> -->
       <div class="ordered-list">
-        <h2 class="ordered-list__title">
-          Список студентов
-        </h2>
+
         <ol class="ordered-list__content">
-          <li>Иванов</li>
-          <li>Петров</li>
-          <li>Сидоров</li>
-          <li>Николаев</li>
+          <li><span class='text-bold'>HTML</span></li>
+          <li><span class='text-italic'>CSS</span></li>
+          <li>PHP</li>
+          <li>SQL</li>
+          <li>JavaScript</li>
+          <li>jQuery</li>
+          <li>Flash</li>
+          <li>SEO</li>
         </ol>
       </div>
-      <div class="ordered-list">
-        <h2 class="ordered-list__title">
-          Список студентов
-        </h2>
-        <ol class="ordered-list__content">
-          <li>Иванов</li>
-            <p>23 года</p>
-            <p>Kурс II</p>
-          <li>Петров</li>
-            <p>23 года</p>
-            <p>Kурс II</p>
-          <li>Сидоров</li>
-            <p>23 года</p>
-            <p>Kурс II</p>
-          <li>Николаев</li>
-            <p>23 года</p>
-            <p>Kурс II</p>
-        </ol>
-      </div>
+      
+      <h2 class="subtitle">
+        PHP и JavaScript
+      </h2>
+      <p class="text">
+        Языки программирования <span class='text-bold'>PHP</span> и <span class='text-bold'>JavaScript</span> позволяют сделать сайт динамичным, то есть реагирующим на действия пользователя. Например, можно сделать красивую выпадающую менюшку или слайдер
+      </p>
+      <h2 class="subtitle">
+        Виды скриптов
+      </h2>
+      <p class="text">
+        Для этого пишутся скрипты (англ. <span class='text-italic'>script</span> - «сценарий») - программы, позволяющиее реагировать на действия пользователя. Скрипты бывают двух видов:
+      </p>
+
+<div class='unordered-list'>
+        <ul class="unordered-list__content">
+          <li>те, которые выполняются на сервере, а результат их выполнения приходит в браузер к пользователю уже в готовом виде. Это скрипты, написанные на языке <span class='text-italic'>PHP</span>. На нем пишуться <span class='text-bold'>CMS-ки</span> – системы управления контентом.</li>
+          <li>те, которые выполняются прямо в браузере пользователя. Это скрипты, написанные на языке <span class='text-bold'>JavaScript</span>. Они чаще всего используются для, того чтобы сделать страницу более удобной и красивой.</li>
+        </ul>
+</div>
+
     </div>
   </div>
 
